--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,54 +1,87 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+:root {
+	--color1 : #35465b;
+	--color2 : #ffa32a;
+	--color3 : #232323;
+	--white : #FFFFFF;
+	--police : 'Play', sans-serif;
+}
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
 body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+	background-color: var(--color1);
+	color: var(--white);
+	font-family: var(--police);
+	font-size: 0.8em;
 }
 
-/* Ajouts perso */
-a {
-    text-decoration: none;
-    color: inherit;
+footer {
+	background-color: var(--color3);
+	text-align: center;
+	padding: 3em;
+	color: var(--color1);
+}
+
+h1 {
+	color: #ffa32a;
+	border-bottom: 2px dashed var(--color3);
+	text-align: center;
+	font-size: 3em;
+	padding: 1em;
+	font-weight: bold;
+}
+
+.category {
+	padding: 1em;
+	border-bottom: 2px dashed var(--color3);
+}
+
+.category-title {
+	color: var(--color3);
+	text-align: center;
+	font-size: 2em;
+	margin-bottom: 0.5em;
+	text-transform: uppercase;
+}
+
+.drink {
+	margin-bottom: 0.8em;
+}
+
+.drink-mainRow {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.drink-mainRow-left {
+	display: flex;
+	align-items: center;
+	max-width: 50%;
+}
+
+.drink-mainRow-right {
+	display: flex;
+	align-items: center;
+	gap: 0.5em;
+}
+
+.drink-name {
+	text-transform: uppercase;
+}
+
+.drink-starscounter {
+	background : none;
+	border: none;
+}
+
+.drink-alcool {
+	color: var(--color2);
+}
+
+.drink-description {
+	color: var(--color3);
+	margin-left: 1em;
+}
+
+.drink-description-maker {
+	font-style: italic;
 }
