--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -1,5 +1,43 @@
 <%- include('./partials/header'); %>
 
-<h1>J'aime trop ma chérie</h1>
+<% categories.forEach(category => { %>
+    <section class="category">
+
+        <h2 class="category-title"><%= category.name %></h2>
+
+        <% category.drinks.forEach(drink => { %>
+            <article class="drink">
+                <div class="drink-mainRow">
+                    <div class="drink-mainRow-left">
+                        <h3 class="drink-name">
+                            <a href="/drinks/<%= drink.id %> "><%= drink.name %></a>
+                        </h3>
+                        <button class="drink-starscounter">❤️ <%= drink.starscounter %></button>
+                    </div>
+                    <% if (!drink.isalcool) { %>
+                        <p class="drink-alcool">
+                            Sans Alcool
+                        </p>
+                    <% } %>
+                    <div class="drink-mainRow-right">
+                        <% for( let i = 0; i < 5; i++ ) { %>
+                            <% if (i < drink.averagerate) { %>
+                                ⭐
+                            <% } else { %>
+                                ⭕
+                            <% } %>
+                        <% } %>
+                        <div class="drink-stock"><%= drink.stock %> bouteilles</div>
+                    </div>
+                </div>
+                <div class="drink-description">
+                    <p class="drink-description-maker"><%= drink.maker %></p>
+                    <p class="drink-description-infos"><%= drink.infos %></p>
+                </div>
+            </article>
+        <% }) %>
+
+    </section>
+<% }) %>
 
 <%- include('./partials/footer'); %>
