--- a/app/views/404.ejs
+++ b/app/views/404.ejs
@@ -1,5 +1,5 @@
 <%- include('./partials/header'); %>
 
-<h1> ERROR 404 - PAGE NOT FOUND</h1>
+<h2 class="title"> ERROR 404 - PAGE NOT FOUND</h2>
 
 <%- include('./partials/footer'); %>
