--- a/app/views/500.ejs
+++ b/app/views/500.ejs
@@ -1,5 +1,5 @@
 <%- include('./partials/header'); %>
 
-<h1> ERROR 500 - INTERNAL SEVER ERROR</h1>
+<h2 class="500"> ERROR 500 - INTERNAL SEVER ERROR</h2>
 
 <%- include('./partials/footer'); %>
