--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -12,9 +12,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
+    <% if (locals.js) { %>
+        <!-- Javascript -->
+        <script src="<%= js %>" defer></script>
+    <% } %>
 </head>
 <body>
     <header>
-        <h1>Alpha Drink</h1>
+        <h1><a href="/">Alpha Drink</a></h1>
     </header>
     <main>
