--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,11 +6,25 @@
 	--police : 'Play', sans-serif;
 }
 
+.hidden {
+	display: none;
+}
+
+/* ---------------PAGE--------------- */
+
 body {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	min-height: 100vh;
 	background-color: var(--color1);
 	color: var(--white);
 	font-family: var(--police);
 	font-size: 0.8em;
+}
+
+main {
+	min-height: 70vh;
 }
 
 footer {
@@ -29,18 +43,20 @@ h1 {
 	font-weight: bold;
 }
 
-.category {
+.main-section {
 	padding: 1em;
 	border-bottom: 2px dashed var(--color3);
 }
 
-.category-title {
+.title {
 	color: var(--color3);
 	text-align: center;
 	font-size: 2em;
 	margin-bottom: 0.5em;
 	text-transform: uppercase;
 }
+
+/* ---------------DRINK--------------- */
 
 .drink {
 	margin-bottom: 0.8em;
@@ -84,4 +100,90 @@ h1 {
 
 .drink-description-maker {
 	font-style: italic;
+}
+
+/* ---------------REVIEW--------------- */
+
+.review {
+	margin-bottom: 1em;
+}
+
+.review-author {
+	color: var(--color2);
+}
+
+.review-date {
+	color: var(--color3);
+}
+
+.review-content {
+	font-style: italic;
+	color: var(--color3);
+	background-color: var(--white);
+	border-radius: 10px;
+	padding: 0.8em;
+}
+
+.btnAdd {
+	display: inline-block;
+	margin: 1em;
+	font-size: 1.2em;
+	color: var(--color2);
+	cursor: pointer;
+}
+
+.btnPlus {
+	background-color: var(--color2);
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+}
+
+
+/* ---------------MODAL--------------- */
+.modal {
+	position: fixed;
+	top: 5%;
+	left: 5%;
+	right: 5%;
+	bottom: 5%;
+	background-color: var(--color1);
+	box-shadow: 0 0 50px var(--color3);
+}
+
+form {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	gap: 1em;
+	padding: 1em;
+	color: var(--white);
+	text-align: center;
+	font-size: 1.5em;
+}
+
+input {
+	line-height: 2em;
+	border-radius: 5px;
+	border: 3px solid var(--color2);
+}
+
+.btnSubmit {
+	padding: 1em;
+	background-color: var(--color2);
+	color: var(--white);
+	font-weight: bold;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+}
+
+.btnClose {
+	padding: 1em;
+	background-color: var(--color3);
+	color: var(--white);
+	font-weight: bold;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
 }
