--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
     <% if (locals.js) { %>
         <!-- Javascript -->
-        <script src="<%= js %>" defer></script>
+        <script src="/javascript<%= js %>" defer></script>
     <% } %>
 </head>
 <body>
