--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,8 +85,10 @@ h1 {
 }
 
 .drink-starscounter {
-	background : none;
-	border: none;
+	color: var(--color3);
+	font-size: 1.2em;
+	font-weight: bold;
+	margin: 0 0.5em;
 }
 
 .drink-alcool {
