--- a/app/views/dashboardPage.ejs
+++ b/app/views/dashboardPage.ejs
@@ -21,7 +21,7 @@
                         <input type="checkbox" class="isAvailable">
                     <% } %>
                     <button class="btnSubmit">Modifier</button>
-                    <button class="btnClose">Supprimer</button>
+                    <button class="btnDelete">Supprimer</button>
                 </div>
                 </article>
         <% }) %>
@@ -48,7 +48,7 @@
         </select>
         <div>
             <button type="submit" class="btnSubmit">Valider</button>
-            <button class="btnClose">Fermer</button>
+            <button type="button" class="btnClose">Fermer</button>
         </div>
     </form>
 </div>
