--- a/app/views/drink.ejs
+++ b/app/views/drink.ejs
@@ -69,7 +69,7 @@
         <input type="text" class="hidden" name="drink_id" value="<%= drink.id %>" required>
         <div>
             <button type="submit" class="btnSubmit">Valider</button>
-            <button class="btnClose">Fermer</button>
+            <button type="button" class="btnClose">Fermer</button>
         </div>
     </form>
 </div>
