--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -16,11 +16,6 @@
                                 </h3>
                                 <a href="/drinks/<%= drink.id %>/addStar" class="drink-starscounter">❤️ <%= drink.starscounter %></a>
                             </div>
-                            <% if (!drink.isalcool) { %>
-                                <p class="drink-alcool">
-                                    Sans Alcool
-                                </p>
-                            <% } %>
                             <% if (drink.averagerate > 0) { %>
                                 <div class="drink-mainRow-right">
                                     <% for( let i = 0; i < 5; i++ ) { %>
@@ -34,6 +29,9 @@
                             <% } %>
                         </div>
                         <div class="drink-description">
+                            <% if (!drink.isalcool) { %>
+                                <p class="drink-alcool">Sans Alcool</p>
+                            <% } %>
                             <p class="drink-description-maker"><%= drink.maker %></p>
                             <p class="drink-description-infos"><%= drink.infos %></p>
                         </div>
